# langchain_learn

./: .env.example  0-Jupyter使用指南.md  1-LangChain的基本使用.ipynb  10-Chains导入和自定义.ipynb  11-LangChain四种处理文档的预制链.ipynb  12-LangChain之Memory工具.ipynb  13-LangChain在链上使用记忆.ipynb  14-第一个agents.ipynb  15-几种不同的内置agent类型.ipynb  16-如何给agent增加memory.ipynb  17-在agent与tool之间共享记忆.ipynb  18-tool的加载与使用.ipynb  19-Tookit的使用.ipynb  2-LangChain提示词工程.ipynb  20-自定义一个agents.ipynb  21-LCEL.ipynb  22-LCEL-2.ipynb  23-LCEL-prompt+llm.ipynb  24-LCEL-chains.ipynb  25-LCEL-Memory.ipynb  26-LECL-Agent.ipynb  27-最佳实践.ipynb  3-LangChain示例选择器.ipynb  4-LangChain-RAG.ipynb  5-LLMs调用.ipynb  7-LangChain文本向量化.ipynb  8-LangChain长文本精度问题.ipynb  8-LangChaiun长文本精度问题.ipynb  9-LangChain四种基础的内置链使用.ipynb  Makefile  Pipfile  README.md  README2.md  prompt_with_output_parser.json  pyproject.toml  requirements.txt  requirements1.txt  simple_prompt.json  simple_prompt.yaml  案例ChatDoc.ipynb
app/: README.md  server.py
crewai/: 01_CrewAI安装与示例.ipynb  02_CrewAI核心组件_agents.ipynb  03_CrewAI核心组件_task.ipynb  04_CrewAI核心组件_crew.ipynb  05_CrewAI核心组件_flow.ipynb  06_CrewAI核心组件_知识库.ipynb  07_CrewAI核心组件_记忆.ipynb  实战案例1_基于CrewAI的游戏开发助手.ipynb  实战案例2_基于CrewAI的营销策略大师.ipynb
crewai/game_builder_crew/: README.md  pyproject.toml
crewai/game_builder_crew/src/game_builder_crew/: crew.py  main.py
crewai/game_builder_crew/src/game_builder_crew/config/: agents.yaml  tasks.yaml
langchain/: ChatModels.ipynb  LangChain_FewShot.ipynb  LangChain_LLM容错处理.ipynb  LangChain_LangSmithHub管理提示词.ipynb  LangChain_PromptTemplate.ipynb  LangChain_events.ipynb  (+10 more)
(+29 files in other folders)
