[project]
name = "game_builder_crew"
version = "0.1.0"
description = "game_builder_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0"
]

[project.scripts]
game_builder_crew = "game_builder_crew.main:run"
train = "game_builder_crew.main:train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
